# variance_reduction

./: CMakeLists.txt  LICENSE  README.md
examples/: input.in
src/: antithetic_engine.cpp  antithetic_engine.h  control_antithetic_engine.cpp  control_antithetic_engine.h  control_variate_engine.cpp  control_variate_engine.h  engine.h  exponential_engine.cpp  exponential_engine.h  main.cpp  random_engine.cpp  random_engine.h  stratified_engine.cpp  stratified_engine.h  utils.cpp  utils.h
